# shadowlynxprox

./: .gitignore  Dockerfile  Makefile  app.py  docker-compose.yml  index.html
.github/workflows/: deploy.yml  pages.yml
ai-core/: .env.example  check_files.sh  pyproject.toml  test_llm.py
ai-core/src/: ai_core_service.py  config.py  main.py
ai-core/src/llm/: __init__.py  router.py  types.py
ai-core/src/llm/prompt_templates/: default.py
ai-core/src/llm/providers/: anthropic_provider.py  deepseek_provider.py  ollama_provider.py  openai_provider.py
ai-core/src/proto/: __init__.py  ai_core_pb2.py  ai_core_pb2_grpc.py
cli/: go.mod  go.sum  main.go
cli/cmd/: chat.go  common.go  exec.go  history.go  plugin.go  root.go  setup.go  version.go
cli/pkg/grpc/: client.go
cli/pkg/grpc/proto/: orchestrator.pb.go  orchestrator_grpc.pb.go  plugin.pb.go  plugin_grpc.pb.go
deploy/docker/: Dockerfile.orchestrator
gateway/: Cargo.toml
orchestrator/: Cargo.toml  build.rs
orchestrator/examples/: dump_memory.rs
orchestrator/proto/: ai_core.proto  orchestrator.proto  plugin.proto
orchestrator/src/: main.rs  plugin_service.rs  service.rs
orchestrator/src/plugin/: host_functions.rs  manifest.rs  mod.rs  runtime.rs  sandbox.rs
plugins/defensive/: manifest.json
plugins/defensive/wat/: defensive.wat
plugins/offensive/: Cargo.toml  manifest.json
plugins/offensive/wat/: build_plugin.sh  dump_memory.py  dump_strings.py  inject_manifest.py  offensive.wat
proto/: orchestrator.proto  plugin.proto
scripts/: rebuild-ai-core.sh  start-all.sh
