[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shadowlynx-ai-core"
version = "0.1.0"
description = "Shadowlynx ProX AI Reasoning Core"
requires-python = ">=3.12"
dependencies = [
    # gRPC
    "grpcio>=1.65",
    "grpcio-tools>=1.65",
    "protobuf>=5.0",
    
    # LLM Clients
    "anthropic>=0.39",
    "openai>=1.55",
    "httpx>=0.27",
    
    # Web Server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    
    # Configuration
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    
    # Async
    "tenacity>=9.0",
    
    # Serialization
    "msgpack>=1.1",
    "orjson>=3.10",
    
    # Memory (will use later)
    "chromadb>=0.5",
    "redis>=5.2",
    
    # Utilities
    "rich>=13.9",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "black>=24.10",
    "ruff>=0.8",
    "mypy>=1.13",
]
local = [
    "ollama>=0.4",
    "sentence-transformers>=3.3",
]

[project.scripts]
slpx-ai = "src.main:main"
