[package]
name = "shadowlynx-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Shadowlynx ProX Orchestration Engine"

[dependencies]
# gRPC framework
tonic = { version = "0.11", features = ["transport", "tls"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-core = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Async traits
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tower = "0.4"

[[bin]]
name = "orchestrator"
path = "src/main.rs"
