[package]
name = "shadowlynx-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Shadowlynx ProX Orchestration Engine"

[dependencies]
# gRPC framework
tonic = { version = "0.11", features = ["transport", "tls"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-core = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Async traits
async-trait = "0.1"

# HTTP client for host functions
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# Random number generation
rand = "0.8"

# Lazy statics for global resources
once_cell = "1"

# WASM Plugin Runtime
wasmtime = "27"
wasmtime-wasi = "27"
wat = "1"
sha2 = "0.10"
hex = "0.4"
rmp-serde = "1"
serde_bytes = "0.11"
cap-std = "3"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tower = "0.4"

[[bin]]
name = "orchestrator"
path = "src/main.rs"



