[package]
name = "offensive-security-plugin"
version = "1.0.0"
edition = "2021"
description = "Offensive security toolkit for Shadowlynx ProX"
authors = ["Shadowlynx ProX"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wee_alloc = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
